@@ -16,6 +16,8 @@ cdebconf (0.57) UNRELEASED; urgency=low
       When backup is disabled, the <Continue> button is now centered.
       The <Yes>/<No> buttons in boolean questions are separated from
       the <Go Back> button.
+    - With progress bars, minimal text height is set to 2, so that
+      there is no box redrawing when 1 or 2 line long text is displayed.
 
  -- Denis Barbier <barbier@debian.org>  Tue,  2 Mar 2004 21:34:59 +0100
 
